src/app/shared/post-capture-card/post-capture-card.component.scss
:host {
  display: block;
}

.toolbar-spacer {
  flex: 1 1 auto;
}

mat-icon {
  color: black;
}

mat-card {
  padding-right: 0;
  padding-left: 0;
  width: 100vw;
}

mat-card .fixed-ratio {
  padding: 0;
  margin: 0;
  background-color: white;
  max-width: 100vw;
  width: 100vw;
  height: 100vw;
  overflow: hidden;
}

mat-card img {
  padding: 0;
  margin: 0;
  width: 100%;
}

mat-card-header {
  padding-right: 16px;
  padding-left: 16px;
}

mat-card-actions {
  width: 100vw;
  padding-right: 8px;
  padding-left: 16px;

  .all-.view-all-button {
    align-items: center;
    padding: 0 30px;
    height: 24px;
    border: 1px solid #564dfc;
    background-color: white;
    box-sizing: border-box;
    border-radius: 13px;
  }
}

.view-all-button {
  align-items: center;
  padding: 0 30px;
  height: 24px;
  border: 1px solid #564dfc;
  background-color: white;
  box-sizing: border-box;
  border-radius: 13px;
}

mat-card-content {
  margin-bottom: 0;
  padding-right: 16px;
  padding-left: 0;
}

mat-card-title {
  font-size: 16px;
  padding-left: 0;
  padding-right: 16px;
}

.mat-card-title {
  font-size: 16px;
}

.post-capture-avatar {
  background-image: url('https://gravatar.com/avatar/8db683da3c728970bb776f6cc4048fd2?s=400&d=mp&r=x');
  background-size: cover;
}

.caption-ellipsis {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding-left: 16px;
}

.caption-full {
  overflow: visible;
  height: auto;
  text-overflow: initial;
  white-space: initial;
}

.info-list[dense] {
  display: none;

  .info-list-content {
    width: 80%;
    float: right;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }

  mat-list-item {
    height: 28px;
  }
}

.info-list-show[dense] {
  display: block;
}

